--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run csv-to-json && react-scripts start",
+    "build": "npm run csv-to-json && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "csv-to-json": "node ./scripts/csvToJson.js"
   },
   "eslintConfig": {
     "extends": [
