--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "news-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alex-paystack.github.io/news-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -21,7 +23,9 @@
     "build": "npm run csv-to-json && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "csv-to-json": "node ./scripts/csvToJson.js"
+    "csv-to-json": "node ./scripts/csvToJson.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
